--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -13,7 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build d41d323cd49b34518b2141c77ec7b2f852e5f261)\n"
+"X-Generator: Launchpad (build 7bbd534dfad8da0a8420b10c8106612d2610ae35)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr ""
@@ -649,13 +649,19 @@ msgstr ""
 msgid "The journal shows the progress."
 msgstr ""
 
-msgid "Would you like to change the stylesheet?"
+msgid "Would you like to change the stylesheet for editing?"
 msgstr ""
 
-msgid "A stylesheet affects how the Bible text in the editor looks."
+msgid "The stylesheet affects how the Bible text in the editor looks."
 msgstr ""
 
 msgid "Please make your choice below."
+msgstr ""
+
+msgid "Would you like to change the stylesheet for export?"
+msgstr ""
+
+msgid "The stylesheet affects how the Bible text looks when exported."
 msgstr ""
 
 msgid "More operations in the Cloud"
@@ -674,6 +680,21 @@ msgid "Nothing was imported."
 msgstr ""
 
 msgid "Nothing was uploaded"
+msgstr ""
+
+msgid "Bible image"
+msgstr ""
+
+msgid "Bible images"
+msgstr ""
+
+msgid "The file was uploaded and is being processed."
+msgstr ""
+
+msgid "Would you like to delete this image?"
+msgstr ""
+
+msgid "The image was deleted."
 msgstr ""
 
 msgid "This book is absent from the Bible"
@@ -918,8 +939,11 @@ msgstr "Carregando ..."
 msgid "All Bibles"
 msgstr "Todas as Bíblias"
 
-msgid "all of them"
-msgstr "Todas elas"
+msgid "user"
+msgstr "usuário"
+
+msgid "me"
+msgstr ""
 
 msgid "Sort on verse"
 msgstr "Classificar por versículo"
@@ -3068,6 +3092,27 @@ msgstr "Envie as alterações para o RSS feed"
 msgid "Import text from a resource"
 msgstr "Importar texto de um recurso"
 
+msgid "Stylesheet for editing"
+msgstr ""
+
+msgid "Stylesheet for export"
+msgstr ""
+
+msgid "Run an automatic daily check on the text"
+msgstr ""
+
+msgid "List of images available for use in Bible text."
+msgstr ""
+
+msgid "Upload an image or a compressed archive of them."
+msgstr ""
+
+msgid "Go back"
+msgstr "Voltar"
+
+msgid "Delete this image"
+msgstr ""
+
 msgid "help"
 msgstr "ajuda"
 
@@ -3123,9 +3168,6 @@ msgid ""
 msgstr ""
 "Ele pesquisará o texto simples da Bíblia, sem números de versículos, "
 "cabeçalhos e outras adições."
-
-msgid "Go back"
-msgstr "Voltar"
 
 msgid "Enter all possible matching pairs in the text of the Bible."
 msgstr "Insira todos os pares possíveis no texto da Bíblia."
@@ -3291,14 +3333,17 @@ msgstr "Data"
 msgid "Change Notifications"
 msgstr "Alterar as notificações"
 
-msgid "Dismiss the notifications of the changes of the following categories:"
-msgstr "Dispensar as notificações de alterações das seguintes categorias:"
+msgid "Dismiss the notifications of the changes made by"
+msgstr ""
 
-msgid "(if their changes and verses match)"
-msgstr "(se suas mudanças e versículos coincidirem)"
+msgid "when they match with changes made by anyone else on the team"
+msgstr ""
 
-msgid "(all of them)"
-msgstr "(todos eles)"
+msgid "Dismiss the notifications of all changes made by me"
+msgstr ""
+
+msgid "Dismiss the notifications of all changes made by anyone"
+msgstr ""
 
 msgid "Select Bible:"
 msgstr "Selecionar a Bíblia:"
@@ -3363,36 +3408,36 @@ msgstr "Esta página com notificações de mudança é para você."
 msgid "Your colleagues have their own lists."
 msgstr "Seus colegas têm suas próprias listas."
 
-msgid ""
-"Changes in the text of the Bibles will be added to the list the next day."
+msgid "Every day it will detect changes in the Bibles."
 msgstr ""
-"Mudanças no texto das Bíblias serão adicionadas à lista no dia seguinte."
+
+msgid ""
+"It will then generate new change notifications based on those changes."
+msgstr ""
+
+msgid "It will add these new change notifications to the list."
+msgstr ""
 
 msgid "The change notifications fall into several categories:"
 msgstr "As notificações de mudança se enquadram em várias categorias:"
 
-msgid "Changes marked with a smiley face are changes made by you."
-msgstr "As alterações marcadas com um rosto sorridente são feitas por você."
-
-msgid "user"
-msgstr "usuário"
-
-msgid "Changes marked with the name of a user are changes made by this user."
+msgid ""
+"Those marked with a smiley face are notifications of changes made by you."
 msgstr ""
-"As alterações marcadas com o nome de um usuário são alterações feitas por "
-"este usuário."
-
-msgid "Changes marked with a book symbol are the changes in the Bible text."
-msgstr ""
-"As mudanças marcadas com um símbolo de livro são as mudanças no texto da "
-"Bíblia."
 
 msgid ""
-"They have been made either by yourself or by someone else working on this "
-"Bible."
+"Those marked with the name of a user are notifications of changes made by "
+"this user."
 msgstr ""
-"Eles foram feitos por você ou por outra pessoa que está trabalhando nesta "
-"Bíblia."
+
+msgid ""
+"Those marked with a book symbol are notifications of changes in the Bible "
+"text."
+msgstr ""
+
+msgid ""
+"They are the result of the combined edits of all users working on this Bible."
+msgstr ""
 
 msgid ""
 "Each category can be enabled or disabled separately in your notifications."
@@ -3891,6 +3936,9 @@ msgstr ""
 "Notificações sobre mudanças na Bíblia feitas por qualquer pessoa serão "
 "geradas para mim online."
 
+msgid "They will be marked with a 📖 icon."
+msgstr ""
+
 msgid ""
 "Notifications about changes in the Bible made by me will be generated for me "
 "online."
@@ -3898,12 +3946,18 @@ msgstr ""
 "Notificações sobre mudanças na Bíblia feitas por mim serão geradas para mim "
 "online."
 
+msgid "They will be marked with a 😊 icon."
+msgstr ""
+
 msgid ""
 "Notifications about changes in the Bible made by the individual contributors "
 "will be generated for me online."
 msgstr ""
 "Notificações sobre mudanças na Bíblia feitas por colaboradores individuais "
 "serão geradas para mim online."
+
+msgid "These notifications will be marked by the team member's name."
+msgstr ""
 
 msgid ""
 "Receive daily mail with the number of online change notifications awaiting "
@@ -4892,6 +4946,12 @@ msgstr ""
 msgid "The type of space to insert after a verse number"
 msgstr ""
 
+msgid "Align the verse numbers in poetry to the left."
+msgstr ""
+
+msgid "This applies to the following markers:"
+msgstr ""
+
 msgid "Font:"
 msgstr ""
 
@@ -4917,9 +4977,6 @@ msgstr ""
 msgid ""
 "The help within the Online Bible provides more information about creating a "
 "module."
-msgstr ""
-
-msgid "The exports use the following stylesheet:"
 msgstr ""
 
 msgid "Password to secure the exports:"
@@ -8929,6 +8986,84 @@ msgstr ""
 msgid "Untick display of non-breaking spaces."
 msgstr ""
 
+msgid "Install Bibledit Cloud on CentOS"
+msgstr ""
+
+msgid "Follow the steps below to install Bibledit Cloud on CentOS 7 and 8."
+msgstr ""
+
+msgid "It needs basic knowledge about working with CentOS Server."
+msgstr ""
+
+msgid "Update the software sources:"
+msgstr ""
+
+msgid "For CentOS 7 install and activate a newer compiler:"
+msgstr ""
+
+msgid "Install the software Bibledit relies on:"
+msgstr ""
+
+msgid "Download the most recent mimetic library from"
+msgstr ""
+
+msgid "Unpack the downloaded mimetic library:"
+msgstr ""
+
+msgid "Change to the directory:"
+msgstr ""
+
+msgid "Build and install the mimetic library:"
+msgstr ""
+
+msgid "This takes a while."
+msgstr ""
+
+msgid ""
+"There will be many technical messages and warnings, but there should be no "
+"errors."
+msgstr ""
+
+msgid "Go back to the home directory:"
+msgstr ""
+
+msgid "Download a recent version of Bibledit from"
+msgstr ""
+
+msgid "Unpack the downloaded Bibledit in folder bibledit:"
+msgstr ""
+
+msgid "Build Bibledit:"
+msgstr ""
+
+msgid "There will be many technical messages, but there should be no errors."
+msgstr ""
+
+msgid "For CentOS 7 deactivate the previously activated compiler:"
+msgstr ""
+
+msgid "Open port 8080 in the firewall:"
+msgstr ""
+
+msgid "Start Bibledit:"
+msgstr ""
+
+msgid ""
+"Open the web address in the browser, follow the instructions on the screen "
+"to configure Bibledit Cloud, and log in."
+msgstr ""
+
+msgid "Most of Bibledit Cloud will now be working."
+msgstr ""
+
+msgid ""
+"To get email services working, connect Bibledit to a gmail or other mail "
+"account."
+msgstr ""
+
+msgid "To get SWORD resources working, install the SWORD libraries."
+msgstr ""
+
 msgid "Install Bibledit on Android"
 msgstr ""
 
@@ -9008,6 +9143,9 @@ msgid "Bibledit on Chrome OS"
 msgstr ""
 
 msgid "Bibledit Cloud on Ubuntu"
+msgstr ""
+
+msgid "Bibledit Cloud on CentOS"
 msgstr ""
 
 msgid "Upgrading"
@@ -9399,38 +9537,6 @@ msgid "Install Bibledit Cloud on Debian and Ubuntu"
 msgstr ""
 
 msgid "It needs basic knowledge about working with Linux servers."
-msgstr ""
-
-msgid "Update the software sources:"
-msgstr ""
-
-msgid "Install the software Bibledit relies on:"
-msgstr ""
-
-msgid "Download a recent version of Bibledit from"
-msgstr ""
-
-msgid "Unpack the downloaded Bibledit in folder bibledit:"
-msgstr ""
-
-msgid "Change to the directory:"
-msgstr ""
-
-msgid "Build Bibledit:"
-msgstr ""
-
-msgid "This takes a while."
-msgstr ""
-
-msgid "There will be many technical messages, but there should be no errors."
-msgstr ""
-
-msgid "Start Bibledit:"
-msgstr ""
-
-msgid ""
-"Open the web address in the browser, follow the instructions on the screen "
-"to configure Bibledit Cloud, and log in."
 msgstr ""
 
 msgid ""
@@ -11597,6 +11703,9 @@ msgstr "Usuário já existe"
 msgid "User created"
 msgstr "Usuário criado"
 
+msgid "Cannot remove the demo admin"
+msgstr ""
+
 msgid "Select a role for"
 msgstr ""
 
@@ -11703,9 +11812,6 @@ msgid "The Bible is being exported to e-Sword format."
 msgstr ""
 
 msgid "The Bible is being exported to Online Bible format."
-msgstr ""
-
-msgid "Would you like to use another stylesheet for the exports?"
 msgstr ""
 
 msgid "The password for securing exports was saved."
@@ -11944,15 +12050,6 @@ msgid "Completed"
 msgstr ""
 
 msgid "The list was updated"
-msgstr ""
-
-msgid "The file was uploaded and is being processed."
-msgstr ""
-
-msgid "Would you like to delete this image?"
-msgstr ""
-
-msgid "The image was deleted."
 msgstr ""
 
 msgid "Number of defined books:"
